--- a/Dots/app/src/main/res/layout/activity_main.xml
+++ b/Dots/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,36 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:layout_height="match_parent"
+    android:paddingRight="30dp" android:paddingLeft="30dp"
+    android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:layout_centerHorizontal="true" >
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        <TextView
+            android:text="@string/main_screen_title"
+            android:layout_width="match_parent"
+            android:gravity="center"
+            android:layout_height="wrap_content"
+            android:paddingTop="30dp"
+            android:textAllCaps="true"
+            android:textSize="40sp" />
 
-</RelativeLayout>
+        <Button
+            android:id="@+id/btnPlay"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/main_screen_play"
+            android:layout_marginTop="30dp" />
+
+        <Button
+            android:id="@+id/btnOptions"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/main_screen_options"
+            android:layout_marginTop="30dp" />
+
+
+</LinearLayout>
