mock button of creating your own high score up, not listing the data correctly

--- a/Dots/app/src/main/res/layout/activity_main.xml
+++ b/Dots/app/src/main/res/layout/activity_main.xml
@@ -7,38 +7,45 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:layout_centerHorizontal="true" >
 
-        <TextView
-            android:text="@string/main_screen_title"
-            android:layout_width="match_parent"
-            android:gravity="center"
-            android:layout_height="wrap_content"
-            android:paddingTop="30dp"
-            android:textAllCaps="true"
-            android:textSize="40sp" />
+    <TextView
+        android:text="@string/main_screen_title"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:paddingTop="30dp"
+        android:textAllCaps="true"
+        android:textSize="40sp" />
 
-        <Button
-            android:id="@+id/btnPlay"
-            android:onClick="onPlayClick"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/main_screen_play"
-            android:layout_marginTop="30dp" />
+    <Button
+        android:id="@+id/btnPlay"
+        android:onClick="onPlayClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_screen_play"
+        android:layout_marginTop="30dp" />
 
-        <Button
-            android:id="@+id/btnOptions"
-            android:onClick="onOptionsClick"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/main_screen_options"
-            android:layout_marginTop="30dp" />
+    <Button
+        android:id="@+id/btnOptions"
+        android:onClick="onOptionsClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_screen_options"
+        android:layout_marginTop="30dp" />
 
-        <Button
-            android:id="@+id/btnHighScores"
-            android:onClick="onHighScoresClick"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/main_screen_high_scores"
-            android:layout_marginTop="30dp" />
+    <Button
+        android:id="@+id/btnHighScores"
+        android:onClick="onHighScoresClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/main_screen_high_scores"
+        android:layout_marginTop="30dp" />
 
+    <Button
+        android:id="@+id/btnSetHighScore"
+        android:onClick="onSetHighScoreClick"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Set high score"
+        android:layout_marginTop="30dp" />
 
 </LinearLayout>
