--- a/Dots/app/src/main/res/layout/activity_high_scores.xml
+++ b/Dots/app/src/main/res/layout/activity_high_scores.xml
@@ -9,7 +9,7 @@
     android:layout_centerHorizontal="true">
 
     <TextView
-        android:text="@string/high_scores_title"
+        android:text="@string/high_scores_title_six"
         android:layout_width="match_parent"
         android:gravity="center"
         android:layout_height="wrap_content"
@@ -18,6 +18,23 @@
 
     <ListView
         android:id="@+id/scoreTable"
+        android:gravity="start"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="6dip"
+        android:layout_marginTop="6dip"
+        android:textAppearance="?android:attr/textAppearanceLarge" />
+
+    <TextView
+        android:text="@string/high_scores_title_eight"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="wrap_content"
+        android:paddingTop="30dp"
+        android:textSize="30sp" />
+
+    <ListView
+        android:id="@+id/scoreTableEight"
         android:gravity="start"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
