--- a/Dots/app/src/main/res/layout/activity_set_high_score.xml
+++ b/Dots/app/src/main/res/layout/activity_set_high_score.xml
@@ -39,8 +39,21 @@
         android:layout_marginTop="20dp"
         android:inputType="numberDecimal" />
 
+    <CheckBox
+        android:id="@+id/six"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="666"
+        android:checked="true" />
+
+    <CheckBox
+        android:id="@+id/eight"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="888"/>
+
     <Button
-        android:id="@+id/btnSubmit"
+        android:id="@+id/btnSubmitSix"
         android:onClick="onSubmitClick"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
