--- a/Dots/app/src/main/res/layout/activity_board_selector.xml
+++ b/Dots/app/src/main/res/layout/activity_board_selector.xml
@@ -22,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/board_selector_six"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp"
+        android:background="@drawable/custom_button" />
 
     <Button
         android:id="@+id/btnEightTiles"
@@ -30,6 +31,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/board_selector_eight"
-        android:layout_marginTop="40dp" />
+        android:layout_marginTop="40dp"
+        android:background="@drawable/custom_button" />
 
 </LinearLayout>
