--- a/Dots/app/src/main/res/layout/activity_set_high_score.xml
+++ b/Dots/app/src/main/res/layout/activity_set_high_score.xml
@@ -45,7 +45,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Rock n roll"
-        android:layout_marginTop="30dp" />
+        android:layout_marginTop="30dp"
+        android:background="@drawable/custom_button" />
 
 </LinearLayout>
 
