--- a/Dots/app/src/main/res/layout/activity_high_scores.xml
+++ b/Dots/app/src/main/res/layout/activity_high_scores.xml
@@ -12,15 +12,17 @@
         android:text="@string/high_scores_title_six"
         android:layout_width="match_parent"
         android:gravity="center"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:paddingTop="30dp"
-        android:textSize="30sp" />
+        android:textSize="28sp" />
 
     <ListView
         android:id="@+id/scoreTable"
         android:gravity="start"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         android:layout_marginStart="6dip"
         android:layout_marginTop="6dip"
         android:textAppearance="?android:attr/textAppearanceLarge" />
@@ -29,15 +31,17 @@
         android:text="@string/high_scores_title_eight"
         android:layout_width="match_parent"
         android:gravity="center"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:paddingTop="30dp"
-        android:textSize="30sp" />
+        android:textSize="28sp" />
 
     <ListView
         android:id="@+id/scoreTableEight"
         android:gravity="start"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="3"
         android:layout_marginStart="6dip"
         android:layout_marginTop="6dip"
         android:textAppearance="?android:attr/textAppearanceLarge" />
