--- a/Dots/app/src/main/res/layout/activity_high_scores.xml
+++ b/Dots/app/src/main/res/layout/activity_high_scores.xml
@@ -20,7 +20,7 @@
     <ListView
         android:id="@+id/scoreTable"
         android:gravity="start"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:layout_marginStart="6dip"
@@ -39,7 +39,7 @@
     <ListView
         android:id="@+id/scoreTableEight"
         android:gravity="start"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="3"
         android:layout_marginStart="6dip"
