--- a/Dots/app/src/main/res/layout/high_score_list_row.xml
+++ b/Dots/app/src/main/res/layout/high_score_list_row.xml
@@ -12,15 +12,16 @@
     <TextView
         android:id="@+id/name"
         android:gravity="start"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="6dip"
         android:layout_marginTop="6dip"
+        android:layout_weight="1"
         android:textAppearance="?android:attr/textAppearanceLarge" />
     <TextView
         android:id="@+id/score"
         android:gravity="end"
-        android:layout_width="fill_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="6dip"
         android:layout_marginTop="6dip"
