Changing button colors

--- a/Dots/app/src/main/res/layout/activity_board_selector.xml
+++ b/Dots/app/src/main/res/layout/activity_board_selector.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/board_selector_six"
+        android:textColor="@color/white"
         android:layout_marginTop="40dp"
         android:background="@drawable/custom_button" />
 
@@ -31,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="70dp"
         android:text="@string/board_selector_eight"
+        android:textColor="@color/white"
         android:layout_marginTop="40dp"
         android:background="@drawable/custom_button" />
 
