--- a/Dots/app/src/main/res/drawable/custom_button.xml
+++ b/Dots/app/src/main/res/drawable/custom_button.xml
@@ -4,34 +4,10 @@
 
     <item android:state_pressed="true" >
         <shape>
-            <gradient
-                android:startColor="@color/darkerblue1"
-                android:endColor="@color/darkerblue2"
-                android:angle="270" />
-            <stroke
-                android:width="3dp"
-                android:color="@color/grey1" />
+            <solid
+                android:color="@color/darkpurple" />
             <corners
-                android:radius="3dp" />
-            <padding
-                android:left="10dp"
-                android:top="10dp"
-                android:right="10dp"
-                android:bottom="10dp" />
-        </shape>
-    </item>
-
-    <item android:state_focused="true" >
-        <shape>
-            <gradient
-                android:endColor="@color/orange1"
-                android:startColor="@color/orange2"
-                android:angle="270" />
-            <stroke
-                android:width="3dp"
-                android:color="@color/grey1" />
-            <corners
-                android:radius="3dp" />
+                android:radius="5dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
@@ -42,15 +18,10 @@
 
     <item>
         <shape>
-            <gradient
-                android:endColor="@color/blue1"
-                android:startColor="@color/blue2"
-                android:angle="270" />
-            <stroke
-                android:width="3dp"
-                android:color="@color/grey1" />
+            <solid
+                android:color="@color/purple" />
             <corners
-                android:radius="3dp" />
+                android:radius="5dp" />
             <padding
                 android:left="10dp"
                 android:top="10dp"
