--- a/Dots/app/src/main/res/layout/activity_main.xml
+++ b/Dots/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/main_screen_play"
+        android:textColor="@color/white"
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_button" />
 
@@ -31,6 +32,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/main_screen_options"
+        android:textColor="@color/white"
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_button" />
 
@@ -40,6 +42,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/main_screen_high_scores"
+        android:textColor="@color/white"
         android:layout_marginTop="30dp"
         android:background="@drawable/custom_button" />
 
