--- a/Dots/app/src/main/res/layout/activity_board_selector.xml
+++ b/Dots/app/src/main/res/layout/activity_board_selector.xml
@@ -1,39 +1,48 @@
-<LinearLayout
+<RelativeLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:paddingRight="30dp" android:paddingLeft="30dp"
         android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        tools:context="nett.arnar.atli.dots.BoardSelector"
-        android:layout_centerHorizontal="true" >
+        tools:context="nett.arnar.atli.dots.BoardSelector" >
 
     <TextView
         android:text="@string/board_selector_title"
         android:layout_width="match_parent"
         android:gravity="center"
+        android:layout_height="fill_parent"
+        android:textSize="30sp"
+        android:layout_above="@+id/buttons"/>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:paddingTop="30dp"
-        android:textSize="30sp" />
+        android:orientation="vertical"
+        android:layout_centerVertical="true"
+        android:id="@+id/buttons">
+        <Button
+            android:id="@+id/btnSixTiles"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:text="@string/board_selector_six"
+            android:textColor="@color/white"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:background="@drawable/green_button" />
 
-    <Button
-        android:id="@+id/btnSixTiles"
-        android:onClick="onClick"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="@string/board_selector_six"
-        android:textColor="@color/white"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/custom_button" />
+        <Button
+            android:id="@+id/btnEightTiles"
+            android:onClick="onClick"
+            android:layout_width="match_parent"
+            android:layout_height="70dp"
+            android:text="@string/board_selector_eight"
+            android:textColor="@color/white"
+            android:layout_marginTop="40dp"
+            android:textStyle="bold"
+            android:textSize="18sp"
+            android:background="@drawable/red_button" />
+    </LinearLayout>
 
-    <Button
-        android:id="@+id/btnEightTiles"
-        android:onClick="onClick"
-        android:layout_width="match_parent"
-        android:layout_height="70dp"
-        android:text="@string/board_selector_eight"
-        android:textColor="@color/white"
-        android:layout_marginTop="40dp"
-        android:background="@drawable/custom_button" />
-
-</LinearLayout>
+</RelativeLayout>
