--- a/Dots/app/src/main/res/layout/activity_set_high_score.xml
+++ b/Dots/app/src/main/res/layout/activity_set_high_score.xml
@@ -47,7 +47,7 @@
         android:text="Rock n roll"
         android:textColor="@color/white"
         android:layout_marginTop="30dp"
-        android:background="@drawable/custom_button" />
+        android:background="@drawable/purple_button" />
 
 </LinearLayout>
 
