--- a/Dots/app/src/main/res/layout/activity_high_scores.xml
+++ b/Dots/app/src/main/res/layout/activity_high_scores.xml
@@ -3,48 +3,59 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/scoreLayout" android:orientation="vertical"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="nett.arnar.atli.dots.HighScoresActivity"
     android:layout_centerHorizontal="true">
 
-    <TextView
-        android:text="@string/high_scores_title_six"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingTop="30dp"
-        android:textSize="28sp" />
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <TextView
+            android:text="@string/high_scores_title_six"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="28sp"
+            android:id="@+id/sixTitle"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:background="@color/blue"/>
 
-    <ListView
-        android:id="@+id/scoreTable"
-        android:gravity="start"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_marginStart="6dip"
-        android:layout_marginTop="6dip"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        <ListView
+            android:id="@+id/scoreTable"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginStart="6dip"
+            android:layout_marginTop="6dip"
+            android:textAppearance="?android:attr/textAppearanceLarge"/>
+    </LinearLayout>
 
-    <TextView
-        android:text="@string/high_scores_title_eight"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:gravity="center"
         android:layout_height="0dp"
-        android:layout_weight="1"
-        android:paddingTop="30dp"
-        android:textSize="28sp" />
+        android:orientation="vertical"
+        android:layout_weight="1">
+        <TextView
+            android:text="@string/high_scores_title_eight"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:textSize="28sp"
+            android:padding="10dp"
+            android:textColor="@color/black"
+            android:background="@color/blue"/>
 
-    <ListView
-        android:id="@+id/scoreTableEight"
-        android:gravity="start"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="3"
-        android:layout_marginStart="6dip"
-        android:layout_marginTop="6dip"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        <ListView
+            android:id="@+id/scoreTableEight"
+            android:gravity="start"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:layout_marginStart="6dip"
+            android:layout_marginTop="6dip"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </LinearLayout>
+
 
 
 </LinearLayout>
