--- a/Dots/app/src/main/res/layout/activity_main.xml
+++ b/Dots/app/src/main/res/layout/activity_main.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingRight="30dp" android:paddingLeft="30dp"
-    android:paddingTop="@dimen/activity_vertical_margin" android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity" >
+    android:paddingTop="0dp" android:orientation="vertical"
+    android:paddingBottom="0dp" tools:context=".MainActivity" >
 
     <TextView
         android:text="@string/main_screen_title"
