--- a/Dots/app/src/main/res/values/colors.xml
+++ b/Dots/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="red">#cd7069</color>
     <color name="darkred">#824b47</color>
     <color name="white">#FFFFFF</color>
+    <color name="black">#000000</color>
 </resources>
